tdf#132752: docx import: improvements for first line indent in lists

As far as I see, Word is using lists with id=0 and no list definitions
to reset list numbering used in this paragraph. At the same time Word
is still using some of default list properties. For example in this
scenario parent style has defined first line indent, but in paragrath
it is overwritten by "not existing" list=0 without definitions.

To this moment I know about only first line indent behavior, but
probably some other properties are also affected.

Change-Id: I344c907bb7a7b83a91f5727e13ad184fb44137b5